--- a/pages/control/tjzljc/tjzljc.wxml
+++ b/pages/control/tjzljc/tjzljc.wxml
@@ -1,1 +1,99 @@
-<text>开发中...</text>
+<import src="/template/commitRecord/commitRecord.wxml" />
+
+<view style="padding-bottom: 100rpx">
+
+	<!-- 提交信息区域 -->
+	<view wx:if="{{showOther}}">
+		
+		<view style="width:100%;margin: auto;position: absolute;top: 0;left: 0;right: 0;bottom: 0;">
+			<!-- 搜索框 -->
+      <controlSearch projectNames="{{projectNames}}" bind:inputTyping="inputTyping" bind:selectProject="selectProject">
+			</controlSearch>
+			
+			<view class="suspension-card-external-page">
+		    <view class="suspension-card-internal-page">
+        <!-- 当前项目名称 -->
+				<view style="text-align:center;width:100%;color:#0089dd">{{projectName}}</view>
+				<!-- 模糊横线 -->
+				<view style="width:80%;border:1rpx solid gray;opacity:0.1;margin:auto"></view>
+				
+				<van-field
+					required
+					value="{{currentProblem}}"
+					label="问题描述"
+					type="textarea"
+					placeholder="请输入问题描述"
+					autosize
+					show-word-limit
+					maxlength="{{maxProblemLength}}"
+					bind:input="inputProblem"
+					border="{{true}}"
+				/>
+
+				<van-field
+					required
+					value="{{currentScore}}"
+					label="扣分"
+					type="textarea"
+					placeholder="请输入扣分数"
+					autosize
+					bind:input="inputScore"
+					border="{{true}}"
+				/>
+
+				<van-cell title="整改期限" value="{{date}}" bind:click="onDisplay" is-link/>
+				<van-calendar show="{{show}}" bind:close="onClose" bind:confirm="onConfirm" />
+
+				<van-uploader file-list="{{ fileList }}" bind:after-read="afterRead" />
+
+					<button hover-class="clickHover" bindtap="submitProblemPlan" style="background-color:#0089dd;margin-top:40rpx"
+						class="weui-btn weui-btn_primary">提交</button>
+					<!-- 提交记录 -->
+					<template is="commitRecord"></template>
+				</view>
+			</view>
+		</view>
+		
+	</view>
+
+
+	<!-- 查看提交信息区域 -->
+	<view wx:if="{{!showOther}}">
+
+		<van-collapse accordion value="{{activeNames}}" bind:change="collapseChange">
+
+			<block wx:for="{{problemPlanList}}" wx:key="index">
+				<van-collapse-item name="{{index}}" value="{{item.unitName}}">
+
+					<view slot="title">
+						<view class="van-cell-text">{{item.projectName}}</view>
+						<van-tag type="danger">{{item.timeNameList.length}}</van-tag>
+					</view>
+
+					<van-cell-group >
+						<block wx:for="{{item.timeNameList}}" wx:for-index="index1" wx:for-item="item1" wx:key="index1">
+							<van-cell 
+								title="{{item1.submitTime}}"
+								value="{{item1.commitName}}" 
+								border="{{ true }}" 
+								is-link 
+								bind:click=""
+								url="/pages/control/tjaqjc/aqjcDetail/aqjcDetail">
+							</van-cell>
+						</block>
+					</van-cell-group>
+
+				</van-collapse-item>
+			</block>
+
+		</van-collapse>
+		
+	</view>
+
+</view>
+
+<!-- 底部菜单 -->
+<van-tabbar z-index="999" active="{{active}}" bind:change="tabbarChange" active-color="#0089dd" inactive-color="#000">
+  <van-tabbar-item icon="records">提交信息</van-tabbar-item>
+  <van-tabbar-item icon="chat-o" info="">查看信息</van-tabbar-item>
+</van-tabbar>
