--- a/pages/tableData/datapages/tptx/tptx.wxml
+++ b/pages/tableData/datapages/tptx/tptx.wxml
@@ -1,50 +1,1 @@
-
-<!-- <view class="page" data-weui-theme="{{theme}}">
-	<view class="weui-form-preview__hd" wx:if="{{categoryType == 1}}">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndFjl" >
-				<view class="application-name"><image src="/images/fjl.png"/>房建类</view>
-			</label>
-		</view>
-	</view>
-	<view class="weui-form-preview__hd" wx:if="{{categoryType == 2}}">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndGylhl" >
-				<view class="application-name"><image src="/images/gylh.png"/>公园绿化类</view>
-			</label>
-		</view>
-	</view>
-  <view class="weui-form-preview__hd" wx:if="{{categoryType == 3}}">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndSzqll">
-				<view class="application-name" ><image src="/images/jgsg.png"/>市政桥梁类</view>
-			</label>
-		</view>
-	</view>
-</view> -->
-
-
-
-<view class="page" data-weui-theme="{{theme}}">
-	<view class="weui-form-preview__hd" >
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndFjl" >
-				<view class="application-name"><image src="/images/fjl.png"/>房建类</view>
-			</label>
-		</view>
-	</view>
-	<view class="weui-form-preview__hd" >
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndGylhl" >
-				<view class="application-name"><image src="/images/gylh.png"/>公园绿化类</view>
-			</label>
-		</view>
-	</view>
-  <view class="weui-form-preview__hd">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndSzqll">
-				<view class="application-name" ><image src="/images/jgsg.png"/>市政桥梁类</view>
-			</label>
-		</view>
-	</view>
-</view>
+<van-image width="100" height="100" src="https://img.yzcdn.cn/vant/cat.jpeg" />
