--- a/pages/control/txxmxx/txBase/txBase.wxml
+++ b/pages/control/txxmxx/txBase/txBase.wxml
@@ -7,40 +7,40 @@
   <view class="suspension-card-internal-page">
     <form bindsubmit="baseFormSubmit">
       
-    <van-field label="建设单位" name="unitName" value="{{projectInfo.unitName}}" placeholder="请输入" />
-    <van-field label="项目名称" value="{{projectInfo.projectName}}" placeholder="请输入" />
-    <van-field label="占地面积" value="{{projectInfo.coverArea}}" placeholder="请输入" />
-    <van-field label="总建筑面积" value="{{projectInfo.totalArea}}" placeholder="请输入" />
+    <van-field label="建设单位" value="{{projectInfo.unitName}}" placeholder="请输入" name="unitName" />
+    <van-field label="项目名称" value="{{projectInfo.projectName}}" placeholder="请输入" name="projectName" />
+    <van-field label="占地面积" value="{{projectInfo.coverArea}}" placeholder="请输入" name="coverArea" />
+    <van-field label="总建筑面积" value="{{projectInfo.totalArea}}" placeholder="请输入" name="totalArea" />
     <block wx:if="{{categoryType==1}}">
-      <van-field label="楼栋数" value="{{projectInfo.buildNum}}" placeholder="请输入" />
-      <van-field label="住宅套数" value="{{projectInfo.houseNum}}" placeholder="请输入" />
-      <van-field label="店面间数" value="{{projectInfo.storeNum}}" placeholder="请输入" />
-      <van-field label="商业面积" value="{{projectInfo.businessArea}}" placeholder="请输入" />
-      <van-field label="住宅面积" value="{{projectInfo.houseArea}}" placeholder="请输入" />
+      <van-field label="楼栋数" value="{{projectInfo.buildNum}}" placeholder="请输入" name="buildNum" />
+      <van-field label="住宅套数" value="{{projectInfo.houseNum}}" placeholder="请输入" name="houseNum" />
+      <van-field label="店面间数" value="{{projectInfo.storeNum}}" placeholder="请输入" name="storeNum" />
+      <van-field label="商业面积" value="{{projectInfo.businessArea}}" placeholder="请输入" name="businessArea" />
+      <van-field label="住宅面积" value="{{projectInfo.houseArea}}" placeholder="请输入" name="houseArea" />
     </block>
     <block wx:if="{{categoryType==2}}">
-      <van-field label="园路面积" value="{{projectInfo.pathArea}}" placeholder="请输入" />
-      <van-field label="铺装面积" value="{{projectInfo.paveArea}}" placeholder="请输入" />
-      <van-field label="景观桥(座)" value="{{projectInfo.landscapeBridge}}" placeholder="请输入" />
-      <van-field label="乔木数(颗)" value="{{projectInfo.treeNum}}" placeholder="请输入" />
-      <van-field label="亮化数(盏)" value="{{projectInfo.brightenNum}}" placeholder="请输入" />
+      <van-field label="园路面积" value="{{projectInfo.pathArea}}" placeholder="请输入" name="pathArea" />
+      <van-field label="铺装面积" value="{{projectInfo.paveArea}}" placeholder="请输入" name="paveArea" />
+      <van-field label="景观桥(座)" value="{{projectInfo.landscapeBridge}}" placeholder="请输入" name="landscapeBridge" />
+      <van-field label="乔木数(颗)" value="{{projectInfo.treeNum}}" placeholder="请输入" name="treeNum" />
+      <van-field label="亮化数(盏)" value="{{projectInfo.brightenNum}}" placeholder="请输入" name="brightenNum" />
     </block>
     <block wx:if="{{categoryType==3}}">
-      <van-field label="道路长" value="{{projectInfo.roadLength}}" placeholder="请输入" />
-      <van-field label="道路宽" value="{{projectInfo.roadWidth}}" placeholder="请输入" />
-      <van-field label="行车道宽" value="{{projectInfo.carriagewayWidth}}" placeholder="请输入" />
-      <van-field label="人行道宽" value="{{projectInfo.sidewalkWidth}}" placeholder="请输入" />
-      <van-field label="花池宽" value="{{projectInfo.pondWidth}}" placeholder="请输入" />
+      <van-field label="道路长" value="{{projectInfo.roadLength}}" placeholder="请输入" name="roadLength" />
+      <van-field label="道路宽" value="{{projectInfo.roadWidth}}" placeholder="请输入" name="roadWidth" />
+      <van-field label="行车道宽" value="{{projectInfo.carriagewayWidth}}" placeholder="请输入" name="carriagewayWidth" />
+      <van-field label="人行道宽" value="{{projectInfo.sidewalkWidth}}" placeholder="请输入" name="sidewalkWidth" />
+      <van-field label="花池宽" value="{{projectInfo.pondWidth}}" placeholder="请输入" name="pondWidth" />
     </block>
-    <van-field label="建设地点" value="{{projectInfo.buildSite}}" type="textarea" placeholder="请输入" />
-    <van-field label="建设年限" value="{{projectInfo.buildYear}}" placeholder="请输入" />
-    <van-field label="新建续建" value="{{projectInfo.buildType==0?'新建':'续建'}}" placeholder="请输入" />
-    <van-field label="是否完成征地拆迁" value="{{projectInfo.isExpropriation==0?'否':'是'}}" placeholder="请输入" />
-    <van-field label="是否列入市级调度" value="{{projectInfo.isDispatch==0?'否':'是'}}" placeholder="请输入" />
-    <van-field label="挂点领导" value="{{projectInfo.leaderName}}" placeholder="请输入" />
-    <van-field label="责任单位" value="{{projectInfo.responsibleUnits}}" placeholder="请输入" />
-    <van-field label="招标方式 " value="{{projectInfo.biddingType==0?'公开招标':'直接委托'}}" placeholder="请输入"/>
-    <van-field label="年度攻坚目标" value="{{projectInfo.annualTarget}}" type="textarea" placeholder="请输入" maxlength="255" show-word-limit bind:change="baseChange"/>
+    <van-field label="建设地点" value="{{projectInfo.buildSite}}" type="textarea" placeholder="请输入" name="buildSite" />
+    <van-field label="建设年限" value="{{projectInfo.buildYear}}" placeholder="请输入" name="buildYear" />
+    <van-field label="新建续建" value="{{projectInfo.buildType==0?'新建':'续建'}}" placeholder="请输入" name="buildType" />
+    <van-field label="是否完成征地拆迁" value="{{projectInfo.isExpropriation==0?'否':'是'}}" placeholder="请输入" name="isExpropriation" />
+    <van-field label="是否列入市级调度" value="{{projectInfo.isDispatch==0?'否':'是'}}" placeholder="请输入" name="isDispatch" />
+    <van-field label="挂点领导" value="{{projectInfo.leaderName}}" placeholder="请输入" name="leaderName" />
+    <van-field label="责任单位" value="{{projectInfo.responsibleUnits}}" placeholder="请输入" name="responsibleUnits" />
+    <van-field label="招标方式 " value="{{projectInfo.biddingType==0?'公开招标':'直接委托'}}" placeholder="请输入" name="biddingType"/>
+    <van-field label="年度攻坚目标" value="{{projectInfo.annualTarget}}" type="textarea" placeholder="请输入" name="annualTarget" maxlength="255" show-word-limit bind:change="baseChange"/>
 
     <button wx:if="{{showBaseButton}}" size="mini" hover-class="clickHover" class="submit-button" formType="submit">提交</button>
 
@@ -52,37 +52,37 @@
 <block wx:if="{{showFive == active}}">
   <view class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
-    <van-field label="项目业主" value="{{projectInfo.ownerCompanyName}}" placeholder="请输入" />
-    <van-field label="项目负责人" value="{{projectInfo.ownerProjectLeader}}" placeholder="请输入" />
-    <van-field label="电话" value="{{projectInfo.ownerPhone}}" placeholder="请输入" />
+    <van-field label="项目业主" value="{{projectInfo.ownerCompanyName}}" placeholder="请输入" name="ownerCompanyName" />
+    <van-field label="项目负责人" value="{{projectInfo.ownerProjectLeader}}" placeholder="请输入" name="ownerProjectLeader" />
+    <van-field label="电话" value="{{projectInfo.ownerPhone}}" placeholder="请输入" name="ownerPhone" />
   </view>
   </view>
   <view class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
-    <van-field label="施工单位" value="{{projectInfo.constructionCompanyName}}" placeholder="请输入" />
-    <van-field label="项目负责人" value="{{projectInfo.constructionProjectLeader}}" placeholder="请输入" />
-    <van-field label="电话" value="{{projectInfo.constructionPhone}}" placeholder="请输入" />
+    <van-field label="施工单位" value="{{projectInfo.constructionCompanyName}}" placeholder="请输入" name="constructionCompanyName" />
+    <van-field label="项目负责人" value="{{projectInfo.constructionProjectLeader}}" placeholder="请输入" name="constructionProjectLeader" />
+    <van-field label="电话" value="{{projectInfo.constructionPhone}}" placeholder="请输入" name="constructionPhone" />
   </view>
   </view>
   <view class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
-    <van-field label="监理单位" value="{{projectInfo.supervisionCompanyName}}" placeholder="请输入" />
-    <van-field label="总监" value="{{projectInfo.supervisionDirectorName}}" placeholder="请输入" />
-    <van-field label="电话" value="{{projectInfo.supervisionPhone}}" placeholder="请输入" />
+    <van-field label="监理单位" value="{{projectInfo.supervisionCompanyName}}" placeholder="请输入" name="supervisionCompanyName" />
+    <van-field label="总监" value="{{projectInfo.supervisionDirectorName}}" placeholder="请输入" name="supervisionDirectorName" />
+    <van-field label="电话" value="{{projectInfo.supervisionPhone}}" placeholder="请输入" name="supervisionPhone" />
   </view>
   </view>
   <view class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
-    <van-field label="设计单位" value="{{projectInfo.designCompanyName}}" placeholder="请输入" />
-    <van-field label="项目负责人" value="{{projectInfo.designProjectLeader}}" placeholder="请输入" />
-    <van-field label="电话" value="{{projectInfo.designPhone}}" placeholder="请输入" />
+    <van-field label="设计单位" value="{{projectInfo.designCompanyName}}" placeholder="请输入" name="designCompanyName" />
+    <van-field label="项目负责人" value="{{projectInfo.designProjectLeader}}" placeholder="请输入" name="designProjectLeader" />
+    <van-field label="电话" value="{{projectInfo.designPhone}}" placeholder="请输入" name="designPhone" />
   </view>
   </view>
   <view class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
-    <van-field label="勘察单位" value="{{projectInfo.surveyCompanyName}}" placeholder="请输入" />
-    <van-field label="项目负责人" value="{{projectInfo.surveyProjectLeader}}" placeholder="请输入" />
-    <van-field label="电话" value="{{projectInfo.surveyPhone}}" placeholder="请输入" />
+    <van-field label="勘察单位" value="{{projectInfo.surveyCompanyName}}" placeholder="请输入" name="surveyCompanyName" />
+    <van-field label="项目负责人" value="{{projectInfo.surveyProjectLeader}}" placeholder="请输入" name="surveyProjectLeader" />
+    <van-field label="电话" value="{{projectInfo.surveyPhone}}" placeholder="请输入" name="surveyPhone" />
   </view>
   </view>
 </block>
@@ -90,46 +90,46 @@
 <!-- 资金信息 -->
 <view wx:if="{{showMoney == active}}" class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
-    <van-field label="项目总投资" value="{{projectInfo.totalMoney}}" placeholder="请输入" />
-    <van-field label="本年投资" value="{{projectInfo.totalMoney1}}" placeholder="请输入" />
-    <van-field label="第二年年度投资" value="{{projectInfo.totalMoney2}}" placeholder="请输入" />
-    <van-field label="第三年年度投资" value="{{projectInfo.totalMoney3}}" placeholder="请输入" />
-    <van-field label="工程建安费" value="{{projectInfo.jiananCost}}" placeholder="请输入" />
+    <van-field label="项目总投资" value="{{projectInfo.totalMoney}}" placeholder="请输入" name="totalMoney" />
+    <van-field label="本年投资" value="{{projectInfo.totalMoney1}}" placeholder="请输入" name="totalMoney1" />
+    <van-field label="第二年年度投资" value="{{projectInfo.totalMoney2}}" placeholder="请输入" name="totalMoney2" />
+    <van-field label="第三年年度投资" value="{{projectInfo.totalMoney3}}" placeholder="请输入" name="totalMoney3" />
+    <van-field label="工程建安费" value="{{projectInfo.jiananCost}}" placeholder="请输入" name="jiananCost" />
     <block wx:if="{{categoryType==1}}" wx:key="index">
-      <van-field label="房建造价" value="{{projectInfo.houseBuildCost}}" placeholder="请输入" />
-      <van-field label="配套造价" value="{{projectInfo.supportCost}}" placeholder="请输入" />
-      <van-field label="供水造价" value="{{projectInfo.waterCost}}" placeholder="请输入" />
-      <van-field label="供电造价" value="{{projectInfo.electricityCost}}" placeholder="请输入" />
-      <van-field label="供气造价" value="{{projectInfo.airCost}}" placeholder="请输入" />
+      <van-field label="房建造价" value="{{projectInfo.houseBuildCost}}" placeholder="请输入" name="houseBuildCost" />
+      <van-field label="配套造价" value="{{projectInfo.supportCost}}" placeholder="请输入" name="supportCost" />
+      <van-field label="供水造价" value="{{projectInfo.waterCost}}" placeholder="请输入" name="waterCost" />
+      <van-field label="供电造价" value="{{projectInfo.electricityCost}}" placeholder="请输入" name="electricityCost" />
+      <van-field label="供气造价" value="{{projectInfo.airCost}}" placeholder="请输入" name="airCost" />
     </block>
     <block wx:if="{{categoryType==2}}" wx:key="index">
-      <van-field label="园林造价" value="{{projectInfo.parkCost}}" placeholder="请输入" />
-      <van-field label="配套用房造价" value="{{projectInfo.supportHouseCost}}" placeholder="请输入" />
-      <van-field label="路场工程造价" value="{{projectInfo.roadCost}}" placeholder="请输入" />
-      <van-field label="文化景观造价" value="{{projectInfo.culturalCost}}" placeholder="请输入" />
+      <van-field label="园林造价" value="{{projectInfo.parkCost}}" placeholder="请输入" name="parkCost" />
+      <van-field label="配套用房造价" value="{{projectInfo.supportHouseCost}}" placeholder="请输入" name="supportHouseCost" />
+      <van-field label="路场工程造价" value="{{projectInfo.roadCost}}" placeholder="请输入" name="roadCost" />
+      <van-field label="文化景观造价" value="{{projectInfo.culturalCost}}" placeholder="请输入" name="culturalCost" />
     </block>
     <block wx:if="{{categoryType==3}}" wx:key="index">
-      <van-field label="市政造价" value="{{projectInfo.municipalCost}}" placeholder="请输入" />
-      <van-field label="桥梁造价" value="{{projectInfo.bridgeCost}}" placeholder="请输入" />
-      <van-field label="给排水造价" value="{{projectInfo.drainageCost}}" placeholder="请输入" />
-      <van-field label="交通工程造价" value="{{projectInfo.trafficCost}}" placeholder="请输入" />
+      <van-field label="市政造价" value="{{projectInfo.municipalCost}}" placeholder="请输入" name="municipalCost" />
+      <van-field label="桥梁造价" value="{{projectInfo.bridgeCost}}" placeholder="请输入" name="bridgeCost" />
+      <van-field label="给排水造价" value="{{projectInfo.drainageCost}}" placeholder="请输入" name="drainageCost" />
+      <van-field label="交通工程造价" value="{{projectInfo.trafficCost}}" placeholder="请输入" name="trafficCost" />
     </block>
-    <van-field label="设计费用" value="{{projectInfo.designCost}}" placeholder="请输入" />
-    <van-field label="勘察费用" value="{{projectInfo.surveyCost}}" placeholder="请输入" />
-    <van-field label="检测费用" value="{{projectInfo.checkCost}}" placeholder="请输入" />
-    <van-field label="监理费用" value="{{projectInfo.supervisionCost}}" placeholder="请输入" />
-    <van-field label="图审费用" value="{{projectInfo.drawCost}}" placeholder="请输入" />
-    <van-field label="其他费用" value="{{projectInfo.otherCost}}" placeholder="请输入" />
+    <van-field label="设计费用" value="{{projectInfo.designCost}}" placeholder="请输入" name="designCost" />
+    <van-field label="勘察费用" value="{{projectInfo.surveyCost}}" placeholder="请输入" name="surveyCost" />
+    <van-field label="检测费用" value="{{projectInfo.checkCost}}" placeholder="请输入" name="checkCost" />
+    <van-field label="监理费用" value="{{projectInfo.supervisionCost}}" placeholder="请输入" name="supervisionCost" />
+    <van-field label="图审费用" value="{{projectInfo.drawCost}}" placeholder="请输入" name="drawCost" />
+    <van-field label="其他费用" value="{{projectInfo.otherCost}}" placeholder="请输入" name="otherCost" />
   </view>
 </view>
 
 <!-- 单体情况 -->
 <view wx:if="{{showPart==active && categoryType==1}}" wx:for="{{projectInfo.list}}" wx:key="index" class="suspension-card-external-page">
   <view class="suspension-card-internal-page">
-    <van-field label="楼栋号" value="{{item.ztName}}" placeholder="请输入" />
-    <van-field label="工程造价" value="{{item.projectCost}}" placeholder="请输入" />
-    <van-field label="建筑面积" value="{{item.buildArea}}" placeholder="请输入" />
-    <van-field label="层数" value="{{item.floors}}" placeholder="请输入" />
+    <van-field label="楼栋号" value="{{item.ztName}}" placeholder="请输入" name="ztName" />
+    <van-field label="工程造价" value="{{item.projectCost}}" placeholder="请输入" name="projectCost" />
+    <van-field label="建筑面积" value="{{item.buildArea}}" placeholder="请输入" name="buildArea" />
+    <van-field label="层数" value="{{item.floors}}" placeholder="请输入" name="floors" />
   </view>
 </view>
 </view>
