--- a/pages/control/txxmxx/txxmxx.wxml
+++ b/pages/control/txxmxx/txxmxx.wxml
@@ -53,6 +53,6 @@
 <!-- 底部菜单 -->
 <van-tabbar z-index="999" active="{{active}}" bind:change="tabbarChange" active-color="#0089dd" inactive-color="#000">
   <van-tabbar-item icon="notes-o">进度/计划</van-tabbar-item>
-  <van-tabbar-item icon="todo-list-o">工期信息</van-tabbar-item>
-  <van-tabbar-item icon="description">项目信息</van-tabbar-item>
+  <van-tabbar-item wx:if="{{jhNotShow}}" icon="todo-list-o">工期信息</van-tabbar-item>
+  <van-tabbar-item wx:if="{{jhNotShow}}" icon="description">项目信息</van-tabbar-item>
 </van-tabbar>
