--- a/pages/control/txxmxx/txPlanSchedule/txProjectPlan/txProjectPlan.wxml
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectPlan/txProjectPlan.wxml
@@ -1,7 +1,8 @@
 <view class="loading-position-center"><van-loading wx:if="{{showUpLoadLoading}}" size="35px" color="#0089dd" vertical><text style="color:#0089dd">上传中...</text></van-loading></view>
 <view class="loading-position-center"><van-loading wx:if="{{showLoadLoading}}" size="35px" color="#0089dd" vertical><text style="color:#0089dd">加载中...</text></van-loading></view>
 <van-toast id="van-toast" />
-<view class="project-name">{{projectName}}</view>
+<view class="project-name-page">{{projectName}}</view>
+<view style="padding-top:80rpx">
 
 <!-- 房建类 -->
 <van-collapse wx:if="{{categoryType==1}}" accordion value="{{ activeName }}" bind:change="collapseChange">
@@ -583,3 +584,5 @@
   </view>
 </view>
 </van-collapse>
+
+</view>
