--- a/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxml
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxml
@@ -1,9 +1,11 @@
 <view class="loading-position-center"><van-loading wx:if="{{showUpLoadLoading}}" size="35px" color="#0089dd" vertical><text style="color:#0089dd">上传中...</text></van-loading></view>
 <view class="loading-position-center"><van-loading wx:if="{{showLoadLoading}}" size="35px" color="#0089dd" vertical><text sewtyle="color:#0089dd">加载中...</text></van-loading></view>
 <van-toast id="van-toast" />
-<view class="project-name">{{projectName}}</view>
+
+<view class="project-name-page">{{projectName}}</view>
 
 <view hidden="{{showOther}}">
+  <view style="padding-top:80rpx;margin-bottom:100rpx">
   <!-- 房建类 -->
   <van-collapse wx:if="{{categoryType==1}}" accordion value="{{ activeName }}" bind:change="collapseChange">
 
@@ -581,10 +583,41 @@
     </view>
   </view>
   </van-collapse>
+  </view>
 </view>
 
-<view hidden="{{!showOther}}">
-  
+<view style="width:100%" hidden="{{!showOther}}">
+  <button bindtap="addSchedule" size="mini" hover-class="clickHover" class="add-button">新增</button>
+  <view style="padding-top:75rpx;margin-bottom:100rpx"></view>
+
+  <van-popup show="{{ showSchedulePopup }}" position="bottom">
+  <van-cell-group>
+    <van-field
+      label="开工内容"
+      model:value="{{ kgContent }}"
+      placeholder="请输入开工内容"
+      border="{{ false }}"
+    />
+    
+    <picker mode="date" value="{{date}}" bindchange="bindKgDateChange">
+        <van-field
+      label="开工时间"
+      model:value="{{ kgDate }}"
+      placeholder="请输入开工时间"
+      border="{{ false }}"
+    />
+    </picker>
+
+
+    <van-field
+      label="造价占比"
+      model:value="{{ costPoint }}"
+      placeholder="请输入造价占比"
+      border="{{ false }}"
+    />
+    <van-button block type="info" bind:click="insertSchedule">保存</van-button>
+  </van-cell-group>
+  </van-popup>
 </view>
 
 
