--- a/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxss
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxss
@@ -1,3 +1,11 @@
+.add-button{
+  position:fixed;
+  top:50%;
+  right:0;
+  background-color:#0089dd;
+  color:#fff;
+  z-index:999
+}
 
 
 /* 悬浮卡片-外部 */
