--- a/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxml
+++ b/pages/control/txxmxx/txPlanSchedule/txProjectSchedule/txProjectSchedule.wxml
@@ -3,7 +3,7 @@
 <van-toast id="van-toast" />
 
 <view class="project-name-page">{{projectName}}</view>
-
+<!-- 提交 -->
 <view hidden="{{showOther}}">
   <view style="padding-top:80rpx;margin-bottom:100rpx">
   <!-- 房建类 -->
@@ -585,39 +585,75 @@
   </van-collapse>
   </view>
 </view>
-
+<!-- 往期 -->
 <view style="width:100%" hidden="{{!showOther}}">
   <button bindtap="addSchedule" size="mini" hover-class="clickHover" class="add-button">新增</button>
-  <view style="padding-top:75rpx;margin-bottom:100rpx"></view>
+  <view style="padding-top:75rpx;margin-bottom:100rpx">
 
-  <van-popup show="{{ showSchedulePopup }}" position="bottom">
-  <van-cell-group>
-    <van-field
-      label="开工内容"
-      model:value="{{ kgContent }}"
-      placeholder="请输入开工内容"
-      border="{{ false }}"
-    />
-    
-    <picker mode="date" value="{{date}}" bindchange="bindKgDateChange">
+    <view class="suspension-card-external-page-s" wx:for="{{pastSchedulePlanList}}" wx:key="index">
+      <view class="suspension-card-internal-page-s">
+
+        <van-cell-group title="{{item.stepName}}">
+          <van-cell title="{{item1.nodeName}}" value="{{item1.startTime}}至{{item1.endTime}}" label="{{item1.percentage}}%" wx:for="{{item.list}}" wx:for-item="item1" wx:for-index="index1" wx:key="index1" border="{{ false }}">
+            <van-icon name="delete" color="red"/>
+          </van-cell>
+        </van-cell-group>
+
+      </view>
+    </view>
+
+  </view>
+
+
+    <van-popup show="{{ showSchedulePopup }}" z-index="10000" position="bottom"  bind:close="closeSchedulePopup">
+    <van-cell-group>
+      <picker mode="selector" range="{{step}}" bindchange="stepNamePicker">
         <van-field
-      label="开工时间"
-      model:value="{{ kgDate }}"
-      placeholder="请输入开工时间"
-      border="{{ false }}"
-    />
-    </picker>
+          label="步骤"
+          model:value="{{stepName}}"
+          placeholder="请输入步骤"
+          border="{{ false }}"
+        />
+      </picker>
+      
+      <picker wx:if="{{stepName.length>0}}" mode="selector" range="{{node[stepIndex]}}" bindchange="nodeNamePicker">
+        <van-field
+        label="节点"
+        model:value="{{ nodeName }}"
+        placeholder="请输入节点"
+        border="{{ false }}"
+        />
+      </picker>
 
+      <picker mode="date" value="{{date}}" end="{{nodeEndtime}}" bindchange="startTimePicker">
+        <van-field
+        label="开始时间"
+        model:value="{{ startTimePicker }}"
+        placeholder="请输入开始时间"
+        border="{{ false }}"
+        />
+      </picker>
 
-    <van-field
-      label="造价占比"
-      model:value="{{ costPoint }}"
-      placeholder="请输入造价占比"
-      border="{{ false }}"
-    />
-    <van-button block type="info" bind:click="insertSchedule">保存</van-button>
-  </van-cell-group>
-  </van-popup>
+      <picker mode="date" value="{{date}}" end="{{nodeEndtime}}" bindchange="endTimePicker">
+        <van-field
+        label="结束时间"
+        model:value="{{ endTimePicker }}"
+        placeholder="请输入结束时间"
+        border="{{ false }}"
+        />
+      </picker>
+
+      <van-field
+        label="百分比"
+        model:value="{{ percentage }}"
+        placeholder="请输入百分比"
+        border="{{ false }}"
+      />
+
+      <van-button block type="info" bind:click="insertSchedule">保存</van-button>
+    </van-cell-group>
+    </van-popup>
+
 </view>
 
 
