--- a/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
+++ b/pages/control/tjzljc/zljcDetail/zljcDetail.wxml
@@ -45,8 +45,9 @@
 		</van-cell-group>
 	</van-panel>
 
-	<view style="background-color: #fff" >
+	<view style="background-color: #fff;height: 250px;" >
 		<van-divider contentPosition="center">回复</van-divider>
+
 			<van-field
 			value=""
 			label="整改回复"
@@ -65,7 +66,9 @@
 				</view>
 				<view class='ui_uploader' bindtap='chooseImage1' wx:if="{{ files1.length < 10 }}"></view>
 			</view>
-	<van-button color="#0089dd" size="small">完成</van-button>
+			<view>
+				<van-button color="#0089dd" size="small">完成</van-button>
+			</view>
 	</view>
 </view>
 
