--- a/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
+++ b/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
@@ -51,7 +51,7 @@
 			autosize
 			show-word-limit
 			maxlength="{{maxPlanLength}}"
-			bind:input="{{inputAnswer}}"
+			bind:input="inputAnswer"
 			border="{{true}}"
 			/>
 			<view class='ui_uploader_cell'>
