--- a/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
+++ b/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxml
@@ -47,16 +47,27 @@
 
 	<!--同意不同意按钮 start-->
 	<block wx:if="{{problem.status == 2}}">
-		<view hidden="{{show}}">
-			<van-button round type="primary" bindtap="agree">同意</van-button>
-			<van-button round type="danger" bindtap="disagree">拒绝</van-button>
-		</view>
+		<van-button round type="primary" bindtap="agree">同意</van-button>
+		<van-button round type="danger" bindtap="disagree">拒绝</van-button>
 	</block>
 	<!--同意不同意按钮 end-->
 
-	<!--定档 start-->
-	<view wx:if="{{problem.status == 3}}">
-		<van-tag type="success" size="large">已同意</van-tag>
-	</view>
-	<!--定档 end-->
+	<!--不同意页面 start-->
+	<block wx:if="{{problem.status == 4}}">
+		<view style="background-color: #fff;height: 250px;">
+			<van-divider contentPosition="center">回复</van-divider>
+			<van-field value="{{reply}}" label="整改回复" type="textarea" placeholder="请输入" autosize show-word-limit maxlength="{{maxPlanLength}}" bind:input="inputAnswer" border="{{true}}" />
+			<view class='ui_uploader_cell'>
+				<view class='ui_uploader_item' wx:for="{{files1}}" wx:for-key="{{index}}">
+					<icon class='ui_uploader_item_icon' bindtap='clearImg1' data-index="{{index}}" type="clear" size="20" color="red" />
+					<image bindtap='previewImage1' data-index="{{index}}" src='{{item}}'></image>
+				</view>
+				<view class='ui_uploader' bindtap='chooseImage1' wx:if="{{ files1.length < 10 }}"></view>
+			</view>
+			<view>
+				<van-button color="#0089dd" size="small" bindtap="commitAnswer">完成</van-button>
+			</view>
+		</view>
+	</block>
+	<!--不同意页面 end-->
 </view>
