--- a/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxss
+++ b/pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxss
@@ -1,1 +1,6 @@
-/* pages/control/tjaqjc/aqjcDetail/aqjcDetail.wxss */
+.btn-review{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin: 15rpx 20rpx;
+}
